--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.camera:camera-core:1.1.0-alpha03'
+    implementation 'com.google.mlkit:vision-common:17.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+    implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
 }
