--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
+
+    implementation 'com.google.android.gms:play-services-maps:18.0.1'
+
 }
