--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.mlkit:vision-common:17.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
